--- a/portfolio.html
+++ b/portfolio.html
@@ -1070,6 +1070,321 @@
             />
           </a>
         </div>
+
+        <!-- Easter Photos -->
+        <!-- Landscape -->
+        <div class="col-md-4 mt-2 photo-item" data-category="easter">
+          <a
+            href="./images/paste/paste_l_1.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/paste/paste_l_1.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="easter">
+          <a
+            href="./images/paste/paste_l_2.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/paste/paste_l_2.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="easter">
+          <a
+            href="./images/paste/paste_l_3.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/paste/paste_l_3.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="easter">
+          <a
+            href="./images/paste/paste_l_4.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/paste/paste_l_4.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="easter">
+          <a
+            href="./images/paste/paste_l_5.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/paste/paste_l_5.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="easter">
+          <a
+            href="./images/paste/paste_l_6.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/paste/paste_l_6.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="easter">
+          <a
+            href="./images/paste/paste_l_7.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/paste/paste_l_7.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="easter">
+          <a
+            href="./images/paste/paste_l_8.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/paste/paste_l_8.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="easter">
+          <a
+            href="./images/paste/paste_l_9.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/paste/paste_l_9.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="easter">
+          <a
+            href="./images/paste/paste_l_10.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/paste/paste_l_10.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="easter">
+          <a
+            href="./images/paste/paste_l_11.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/paste/paste_l_11.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="easter">
+          <a
+            href="./images/paste/paste_l_12.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/paste/paste_l_12.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <!-- Portrait -->
+        <div class="col-md-4 mt-2 photo-item" data-category="easter">
+          <a
+            href="./images/paste/paste_p_1.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/paste/paste_p_1.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="easter">
+          <a
+            href="./images/paste/paste_p_2.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/paste/paste_p_2.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="easter">
+          <a
+            href="./images/paste/paste_p_3.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/paste/paste_p_3.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="easter">
+          <a
+            href="./images/paste/paste_p_4.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/paste/paste_p_4.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="easter">
+          <a
+            href="./images/paste/paste_p_5.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/paste/paste_p_5.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="easter">
+          <a
+            href="./images/paste/paste_p_6.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/paste/paste_p_6.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="easter">
+          <a
+            href="./images/paste/paste_p_7.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/paste/paste_p_7.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="easter">
+          <a
+            href="./images/paste/paste_p_8.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/paste/paste_p_8.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="easter">
+          <a
+            href="./images/paste/paste_p_9.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/paste/paste_p_9.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="easter">
+          <a
+            href="./images/paste/paste_p_10.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/paste/paste_p_10.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="easter">
+          <a
+            href="./images/paste/paste_p_11.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/paste/paste_p_11.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="easter">
+          <a
+            href="./images/paste/paste_p_12.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/paste/paste_p_12.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
       </div>
     </div>
 
