--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
     </section>
 
     <!-- Services -->
-    <section id="services" class="services bg-light py-6">
+    <!-- <section id="services" class="services bg-light py-6">
       <div class="container">
         <div class="row">
           <div class="col-lg-5">
@@ -395,7 +395,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Details 2 -->
     <!-- <section class="details-2 position-relative my-6 overflow-hidden">
