--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                 data-bs-toggle="modal"
                 data-bs-target="#studio-foto-modal"
               >
+                <i class="fas fa-envelope me-2"></i>
                 Contactați-ne
               </a>
             </div>
@@ -163,31 +164,6 @@
         </div>
       </div>
     </header>
-
-    <!-- Stats -->
-    <!-- <section id="stats" class="stats container">
-      <div class="row my-6">
-        <div class="col-md-3 col-sm-6 text-center">
-          <h2 class="counter xl-text" data-target="328"></h2>
-          <p>Happy Customers</p>
-        </div>
-
-        <div class="col-md-3 col-sm-6 text-center">
-          <h2 class="counter xl-text" data-target="285"></h2>
-          <p>Issues Solved</p>
-        </div>
-
-        <div class="col-md-3 col-sm-6 text-center">
-          <h2 class="counter xl-text" data-target="159"></h2>
-          <p>Good Reviews</p>
-        </div>
-
-        <div class="col-md-3 col-sm-6 text-center">
-          <h2 class="counter xl-text" data-target="128"></h2>
-          <p>Case Studies</p>
-        </div>
-      </div>
-    </section> -->
 
     <!-- About + Our Values -->
     <section
@@ -317,15 +293,17 @@
                   </p>
                 </li>
               </ul>
-              <a href="portfolio.html" class="btn btn-primary btn-lg m-2"
-                >Vedeți portofoliul</a
-              >
+              <a href="portfolio.html" class="btn btn-primary btn-lg m-2">
+                <i class="fas fa-images me-2"></i>
+                Vezi portofoliul
+              </a>
               <a
                 href="#contact"
                 class="btn btn-outline-secondary btn-lg m-2"
                 data-bs-toggle="modal"
                 data-bs-target="#studio-foto-modal"
               >
+                <i class="fas fa-envelope me-2"></i>
                 Contactați-ne
               </a>
             </div>
@@ -334,207 +312,47 @@
       </div>
     </section>
 
-    <!-- Services -->
-    <!-- <section id="services" class="services bg-light py-6">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-5">
-            <div class="text-container text-center text-lg-start">
-              <h2>
-                <span class="text-secondary">Serviciile</span> pe care le oferim
-              </h2>
-              <p>
-                At our company, we provide a wide range of services to meet all
-                your office design needs. With our expertise and attention to
-                detail, we ensure that every aspect of your office space is
-                carefully considered and executed.
-              </p>
-            </div>
-          </div>
-          <div class="col-lg-7">
-            <div class="row mb-4">
-              <div
-                class="col-md-4 d-flex flex-column align-items-center text-center"
-              >
-                <i class="fas fa-rocket fa-4x text-secondary mb-2"></i>
-                <p class="fs-5 fw-bold">Evenimente Speciale</p>
-              </div>
-              <div
-                class="col-md-4 d-flex flex-column align-items-center text-center"
-              >
-                <i class="fas fa-clock fa-4x text-secondary mb-2"></i>
-                <p class="fs-5 fw-bold">Familie și portret</p>
-              </div>
-              <div
-                class="col-md-4 d-flex flex-column align-items-center text-center"
-              >
-                <i class="fas fa-comments fa-4x text-secondary mb-2"></i>
-                <p class="fs-5 fw-bold">Profesionale</p>
-              </div>
-            </div>
-            <div class="row">
-              <div
-                class="col-md-4 d-flex flex-column align-items-center text-center"
-              >
-                <i class="fas fa-tools fa-4x text-secondary mb-2"></i>
-                <p class="fs-5 fw-bold">Creative</p>
-              </div>
-              <div
-                class="col-md-4 d-flex flex-column align-items-center text-center"
-              >
-                <i class="fas fa-chart-pie fa-4x text-secondary mb-2"></i>
-                <p class="fs-5 fw-bold">Create A Great Atmosphere</p>
-              </div>
-              <div
-                class="col-md-4 d-flex flex-column align-items-center text-center"
-              >
-                <i class="fas fa-chart-bar fa-4x text-secondary mb-2"></i>
-                <p class="fs-5 fw-bold">Tehnice</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
-
-    <!-- Details 2 -->
-    <!-- <section class="details-2 position-relative my-6 overflow-hidden">
-      <img
-        src="images/decoration-star.svg"
-        alt=""
-        class="decoration-star position-absolute"
-      />
-      <div class="container position-relative z-3">
-        <div class="row">
-          <div class="col-lg-6">
-            <div class="text-container text-center text-lg-start mb-4">
-              <h2>
-                Transform Your Workspace For Enhanced
-                <span class="text-primary">Productivity</span>
-              </h2>
-              <p>
-                A thoughtfully designed and well-organized office space has a
-                profound impact on productivity and employee satisfaction. It
-                sets the stage for seamless collaboration, efficient workflows,
-                and creative inspiration. At our company, we specialize in
-                creating tailored office environments that maximize productivity
-                and elevate the overall work experience.
-              </p>
-              <a href="article.html" class="btn btn-primary">Get Started</a>
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="image-container d-flex justify-content-center">
-              <img src="images/details-2.png" alt="" class="iimg-fluid" />
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
-
     <!-- Get Quote -->
-    <section class="get-quote py-6 text-center">
+    <section class="get-quote py-6 text-center text-dark">
       <div class="container">
-        <div class="row">
-          <div class="col-lg-8 offset-lg-2">
-            <h4 class="lh-base">
-              Our team of highly skilled designers and interior construction
-              workers can deliver above your level of expections
-            </h4>
-            <a href="#contact" class="btn btn-secondary btn-lg">Get Quote</a>
-          </div>
-        </div>
-      </div>
-    </section>
+        <h2 class="mb-3 text-dark">
+          Pregătiți să imortalizăm momentele importante din viața voastră?
+        </h2>
+        <p class="mb-4">
+          Contactați-ne pentru o ofertă personalizată sau pentru a programa o
+          ședință foto. Suntem doar la un mesaj distanță!
+        </p>
 
-    <!-- Projects -->
-    <section id="projects" class="projects py-6">
-      <div class="container">
-        <h2 class="text-center pb-4">Proiectele noastre</h2>
-        <!-- Projects Row 1 -->
-        <div class="row mb-4">
-          <div class="col-md-4">
-            <div class="card border-0">
-              <img src="images/project-1.jpg" alt="" />
-              <div class="card-body">
-                <h5 class="card-title">Office space for banking</h5>
-                <p class="card-text">
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Dolore, impedit.
-                  <a href="article.html">Read More</a>
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card border-0">
-              <img src="images/project-2.jpg" alt="" />
-              <div class="card-body">
-                <h5 class="card-title">Planning and design for startup</h5>
-                <p class="card-text">
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Dolore, impedit.
-                  <a href="article.html">Read More</a>
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card border-0">
-              <img src="images/project-3.jpg" alt="" />
-              <div class="card-body">
-                <h5 class="card-title">Colors & materials update</h5>
-                <p class="card-text">
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Dolore, impedit.
-                  <a href="article.html">Read More</a>
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
+        <button
+          class="btn btn-primary me-2"
+          data-bs-toggle="modal"
+          data-bs-target="#contactModal"
+        >
+          <i class="fas fa-envelope me-2"></i>Contactați-ne
+        </button>
 
-        <!-- Projects Row 2 -->
-        <div class="row mb-4">
-          <div class="col-md-4">
-            <div class="card border-0">
-              <img src="images/project-4.jpg" alt="" />
-              <div class="card-body">
-                <h5 class="card-title">Analysis and floor design</h5>
-                <p class="card-text">
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Dolore, impedit.
-                  <a href="article.html">Read More</a>
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card border-0">
-              <img src="images/project-5.jpg" alt="" />
-              <div class="card-body">
-                <h5 class="card-title">Office space decoration</h5>
-                <p class="card-text">
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Dolore, impedit.
-                  <a href="article.html">Read More</a>
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card border-0">
-              <img src="images/project-6.jpg" alt="" />
-              <div class="card-body">
-                <h5 class="card-title">Playground for kindergarten</h5>
-                <p class="card-text">
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Dolore, impedit.
-                  <a href="article.html">Read More</a>
-                </p>
-              </div>
-            </div>
-          </div>
+        <a href="portfolio.html" class="btn btn-outline-secondary">
+          <i class="fas fa-images me-2"></i>Vezi portofoliul
+        </a>
+
+        <div class="mt-4 icons-container">
+          <a
+            href="https://www.facebook.com/profile.php?id=100063818465707"
+            target="_blank"
+            class="me-3"
+          >
+            <i class="fab fa-facebook fa-2x"></i>
+          </a>
+          <a
+            href="https://www.instagram.com/studiofotoadda?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
+            target="_blank"
+            class="me-3"
+          >
+            <i class="fab fa-instagram fa-2x"></i>
+          </a>
+          <a href="#" class="me-3">
+            <i class="fab fa-whatsapp fa-2x"></i>
+          </a>
         </div>
       </div>
     </section>
@@ -542,7 +360,9 @@
     <!-- Testimonials -->
     <section id="testimonials" class="testimonials bg-light py-6">
       <div class="container-fluid">
-        <h2>Ce spun clienții despre serviciile noastre</h2>
+        <h2 class="text-center mb-5">
+          Ce spun clienții despre serviciile noastre
+        </h2>
         <div id="testimonialCarousel" class="carousel slide">
           <div class="carousel-inner">
             <!-- Slide 1 -->
@@ -557,14 +377,11 @@
                   width="120"
                 />
                 <p class="w-50 my-4 fst-italic fs-4 mb-4">
-                  “Expense bed any sister depend changer off piqued one.
-                  Contented continued any happiness instantly objection yet her
-                  allowance. Use correct day new brought tedious. By come this
-                  been in. Kept easy or sons my it how about some words here
-                  done”
+                  “Oameni deosebiți, activitate de calitate! Mulțumesc pentru
+                  serviciile dumneavoastră! 🤗❤️”
                 </p>
-                <div class="fw-bold fs-5 mt-4">Marlene Visconte</div>
-                <div>General Manager - Scouter</div>
+                <div class="fw-bold fs-5 mt-4">Silvia Mere</div>
+                <div>Facebook</div>
               </div>
             </div>
 
@@ -580,14 +397,11 @@
                   width="120"
                 />
                 <p class="w-50 my-4 fst-italic fs-4 mb-4">
-                  “Expense bed any sister depend changer off piqued one.
-                  Contented continued any happiness instantly objection yet her
-                  allowance. Use correct day new brought tedious. By come this
-                  been in. Kept easy or sons my it how about some words here
-                  done”
+                  “Sunt extraordinari!!!Recomand cu drag aceasta echipa
+                  tanara,frumoasa si profesionista!!!!👏👏👏”
                 </p>
-                <div class="fw-bold fs-5 mt-4">John Spiker</div>
-                <div>Team Leader - Vanquish</div>
+                <div class="fw-bold fs-5 mt-4">Ana Dumanovschi</div>
+                <div>Facebook</div>
               </div>
             </div>
             <!-- Slide 1 -->
@@ -602,14 +416,12 @@
                   width="120"
                 />
                 <p class="w-50 my-4 fst-italic fs-4 mb-4">
-                  “Expense bed any sister depend changer off piqued one.
-                  Contented continued any happiness instantly objection yet her
-                  allowance. Use correct day new brought tedious. By come this
-                  been in. Kept easy or sons my it how about some words here
-                  done”
+                  “Recomand pentru disponibilitate în a oferi servicii, m au
+                  aștept 10 min după program, calitate poze foarte bună și
+                  prețuri accesibile.”
                 </p>
-                <div class="fw-bold fs-5 mt-4">Stella Virtuoso</div>
-                <div>Design Chief - Bikegirl</div>
+                <div class="fw-bold fs-5 mt-4">Teodorascu Dorina</div>
+                <div>Google</div>
               </div>
             </div>
           </div>
