--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
         <button
           class="btn btn-primary me-2"
           data-bs-toggle="modal"
-          data-bs-target="#contactModal"
+          data-bs-target="#studio-foto-modal"
         >
           <i class="fas fa-envelope me-2"></i>Contactați-ne
         </button>
@@ -404,7 +404,7 @@
                 <div>Facebook</div>
               </div>
             </div>
-            <!-- Slide 1 -->
+            <!-- Slide 3 -->
             <div class="carousel-item">
               <div
                 class="d-flex flex-column justify-content-center align-items-center text-center"
@@ -431,7 +431,7 @@
             data-bs-target="#testimonialCarousel"
             data-bs-slide="prev"
           >
-            <i class="fas fa-arrow-circle-left fa-3x text-secondary"></i>
+            <i class="fas fa-arrow-circle-left fa-3x text-primary"></i>
           </button>
           <button
             class="carousel-control-next"
@@ -439,7 +439,7 @@
             data-bs-target="#testimonialCarousel"
             data-bs-slide="next"
           >
-            <i class="fas fa-arrow-circle-right fa-3x text-secondary"></i>
+            <i class="fas fa-arrow-circle-right fa-3x text-primary"></i>
           </button>
         </div>
       </div>
