further work on the footer

--- a/index.html
+++ b/index.html
@@ -341,17 +341,17 @@
             target="_blank"
             class="me-3"
           >
-            <i class="fab fa-facebook fa-2x"></i>
+            <i class="fab fa-facebook fa-3x"></i>
           </a>
           <a
             href="https://www.instagram.com/studiofotoadda?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
             target="_blank"
             class="me-3"
           >
-            <i class="fab fa-instagram fa-2x"></i>
+            <i class="fab fa-instagram fa-3x"></i>
           </a>
           <a href="#" class="me-3">
-            <i class="fab fa-whatsapp fa-2x"></i>
+            <i class="fab fa-whatsapp fa-3x"></i>
           </a>
         </div>
       </div>
@@ -613,52 +613,67 @@
     <footer class="footer bg-light py-6">
       <div class="container">
         <div class="row">
-          <div class="col-md-4 my-3">
-            <h6>About Yavin</h6>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Molestiae, possimus! Similique asperiores aliquid accusantium
-              laudantium.
+          <div class="col-md-4 my-3 d-flex flex-column align-items-start gap-3">
+            <div
+              class="d-flex justify-content-center align-items-center logo-footer"
+            >
+              <img
+                src="images/logo.svg"
+                alt="Logo Studio Foto Adda"
+                width="50"
+              />
+              <div class="d-flex flex-column">
+                <span class="logo-text"> Studio Foto Adda </span>
+                <small class="logo-subtext">Servicii Foto Profesionale</small>
+              </div>
+            </div>
+            <p class="p-logo-footer">
+              Oferim servicii foto profesionale pentru nunți, botezuri, ședințe
+              foto de familie și alte evenimente speciale din viața ta.
             </p>
           </div>
           <div class="col-md-4 my-3">
-            <h6>Links</h6>
+            <h6>Linkuri utile</h6>
             <ul class="list-unstyled">
               <li>
-                Important: <a href="#">Terms & Conditions</a>,
-                <a href="#">Privacy Policy</a>
+                <i class="fa-solid fa-cookie-bite me-2"></i>
+                Info:
+                <a href="#">Politica de cookies</a>
               </li>
               <li>
-                Useful: <a href="#">Icon Library</a>,
-                <a href="#">Illustrations</a>
+                <i class="fa-solid fa-envelope me-2"></i> Adresă de email:
+                <a href="mailto:fotoadda@yahoo.com">fotoadda@yahoo.com</a>
               </li>
               <li>
-                Menu: <a href="#">Home</a>, <a href="#details">Details</a>,
-                <a href="#services">Services</a>, <a href="#contact">Contact</a>
+                <i class="fa-solid fa-compass me-2"></i>
+                Navigare: <a href="index.html">Acasă</a>,
+                <a href="services.html">Servicii</a>,
+                <a href="portfolio.html">Portofoliu</a>,
+                <a href="contact.html">Contact</a>
               </li>
             </ul>
           </div>
           <div class="col-md-4 my-3">
+            <h6>Rețele de socializare</h6>
             <div class="mb-4">
-              <a href="#" class="text-decoration-none">
-                <i class="fab fa-facebook fa-3x text-dark mx-2"></i>
+              <a
+                href="https://www.facebook.com/profile.php?id=100063818465707"
+                target="_blank"
+                class="me-3 text-decoration-none"
+              >
+                <i class="fab fa-facebook fa-3x"></i>
               </a>
-              <a href="#" class="text-decoration-none">
-                <i class="fab fa-twitter fa-3x text-dark mx-2"></i>
+              <a
+                href="https://www.instagram.com/studiofotoadda?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
+                target="_blank"
+                class="me-3 text-decoration-none"
+              >
+                <i class="fab fa-instagram fa-3x"></i>
               </a>
-              <a href="#" class="text-decoration-none">
-                <i class="fab fa-instagram fa-3x text-dark mx-2"></i>
-              </a>
-              <a href="#" class="text-decoration-none">
-                <i class="fab fa-pinterest fa-3x text-dark mx-2"></i>
+              <a href="#" class="me-3 text-decoration-none">
+                <i class="fab fa-whatsapp fa-3x"></i>
               </a>
             </div>
-            <p>
-              We would love to hear from you
-              <a href="mailto:contact@site.com"
-                ><strong>contact@site.com</strong></a
-              >
-            </p>
           </div>
         </div>
       </div>
