--- a/thank_you.html
+++ b/thank_you.html
@@ -3,9 +3,71 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/font-awesome.css" />
+    <link rel="stylesheet" href="css/bootstrap.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <!-- favicon -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./images/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./images/favicon-16x16.png"
+    />
+
+    <!-- Pacifico Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="manifest" href="/site.webmanifest" />
+    <title>Studio Foto Adda</title>
     <title>Document</title>
   </head>
   <body>
-    <h2>Multumim pentru ca ati completat formularul!</h2>
+    <div class="container container-thank-you">
+      <div
+        class="d-flex h-100 flex-column justify-content-center align-items-center"
+      >
+        <div class="d-flex justify-content-center align-items-center gap-3">
+          <img
+            src="./images/logo.svg"
+            class="img-fluid logo-thank-you-page"
+            alt="logo studio foto adda"
+          />
+          <div class="d-flex flex-column">
+            <span class="logo-text text-dark"> Studio Foto Adda </span>
+            <small class="logo-subtext text-dark"
+              >Servicii Foto Profesionale</small
+            >
+          </div>
+        </div>
+
+        <h3>Mulțumim pentru că ați completat formularul!</h3>
+        <p class="lead">
+          Vom analiza informațiile transmise și vom reveni cu vești pentru
+          dumneavoastră cât mai curând!
+        </p>
+        <a class="text-decoration-none btn btn-secondary" href="index.html"
+          >Înapoi la pagina principală</a
+        >
+      </div>
+    </div>
+
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
