--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
       </div>
     </section>
 
-    <!-- Get Quote -->
+    <!-- Call to action -->
     <section class="get-quote py-6 text-center text-dark">
       <div class="container">
         <h2 class="mb-3 text-dark">
