further changes on portfolio page

--- a/index.html
+++ b/index.html
@@ -625,8 +625,10 @@
                 width="50"
               />
               <div class="d-flex flex-column">
-                <span class="logo-text"> Studio Foto Adda </span>
-                <small class="logo-subtext">Servicii Foto Profesionale</small>
+                <span class="logo-text text-dark"> Studio Foto Adda </span>
+                <small class="logo-subtext text-dark"
+                  >Servicii Foto Profesionale</small
+                >
               </div>
             </div>
             <p class="p-logo-footer">
